_course_files/3 Gateways/6-istio-rules-prefix.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: ingress-gateway-istio-configuration
spec:
  selector:
    istio: ingressgateway # use the default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # domain name of the external website. Not good for production
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-vs
  namespace: default
spec:
  hosts: # which incoming hosts are we applying the proxy rules to
    - "*" # Copy the value in the gateway hosts
  gateways:
    - ingress-gateway-istio-configuration
  http:
    - match:
      - uri: #IF
          prefix: "/experimental"
      - uri: #OR
          prefix: "/canary"
      route: #THEN
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: experimental
    - match:
      - uri: #IF
          prefix: "/"
      route: #THEN
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: original
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-dr
  namespace: default
spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
